--- a/index.ipynb
+++ b/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from truebranch import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# TrueBranch\n",
     "\n",
-    "> Summary description here."
+    "Welcome to TrueBranch - A novel way of distinguishing truthfully from untruthfully reported imagery by using low-resolution satellite data to verify the location of high-resolution drone data."
    ]
   },
   {
@@ -34,10 +34,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "pip install truebranch"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "Testing function built in core"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Simona!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Simona\")"
    ]
   },
   {
