nbdev_export added

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export #in doc and module\n",
+    "%nbdev_export\n",
     "def say_hello(to):\n",
     "    \"Say hello to somebody\"\n",
     "    return f'Hello {to}!'"
