--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# truebranch\n",
+    "# truebranch1\n",
     "\n",
     "> API details."
    ]
