additional functions added

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# truebranch1\n",
+    "# truebranch functions\n",
     "\n",
     "> API details."
    ]
@@ -58,6 +58,116 @@
    ],
    "source": [
     "say_hello(\"Jana\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:VERSION 0.9.87.dev4\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import pytorch_metric_learning\n",
+    "from pytorch_metric_learning import losses, miners, samplers, trainers, testers\n",
+    "from pytorch_metric_learning.utils import common_functions\n",
+    "import pytorch_metric_learning.utils.logging_presets as logging_presets\n",
+    "import numpy as np\n",
+    "import torchvision\n",
+    "from torchvision import datasets, transforms\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from PIL import Image\n",
+    "import logging\n",
+    "import faiss\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cycler import cycler\n",
+    "import record_keeper\n",
+    "logging.getLogger().setLevel(logging.INFO)\n",
+    "logging.info(\"VERSION %s\"%pytorch_metric_learning.__version__)\n",
+    "\n",
+    "from record_keeper import RecordKeeper, RecordWriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Variables\n",
+    "# Set the image transforms\n",
+    "train_transform = transforms.Compose([transforms.Resize(224),\n",
+    "                                    transforms.ToTensor(),\n",
+    "                                    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
+    "\n",
+    "val_transform = transforms.Compose([transforms.Resize(224),\n",
+    "                                    transforms.ToTensor(),\n",
+    "                                    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset =  datasets.ImageFolder('/Users/Simona/Documents/Studium/MasterThesisFolder/AdditionalCode/Fresno_Area/train', transform=train_transform)\n",
+    "val_dataset =  datasets.ImageFolder('/Users/Simona/Documents/Studium/MasterThesisFolder/AdditionalCode/Fresno_Area/val', transform=val_transform)\n",
+    "test_dataset =  datasets.ImageFolder('/Users/Simona/Documents/Studium/MasterThesisFolder/AdditionalCode/Fresno_Area/test', transform=val_transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MLP(nn.Module):\n",
+    "    # layer_sizes[0] is the dimension of the input\n",
+    "    # layer_sizes[-1] is the dimension of the output\n",
+    "    def __init__(self, layer_sizes, final_relu=False):\n",
+    "        super().__init__()\n",
+    "        layer_list = []\n",
+    "        layer_sizes = [int(x) for x in layer_sizes]\n",
+    "        num_layers = len(layer_sizes) - 1\n",
+    "        final_relu_layer = num_layers if final_relu else num_layers - 1\n",
+    "        for i in range(len(layer_sizes) - 1):\n",
+    "            input_size = layer_sizes[i]\n",
+    "            curr_size = layer_sizes[i + 1]\n",
+    "            if i < final_relu_layer:\n",
+    "                layer_list.append(nn.ReLU(inplace=True))\n",
+    "            layer_list.append(nn.Linear(input_size, curr_size))\n",
+    "        self.net = nn.Sequential(*layer_list)\n",
+    "        self.last_linear = self.net[-1]\n",
+    "        #self.record_these = [\"last_linear\", \"net\"]\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp core2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# truebranch functions 2"
    ]
   },
   {
