--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -93,6 +93,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: faiss-cpu in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (1.6.3)\r\n",
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from faiss-cpu) (1.19.1)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install faiss-cpu --no-cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
